--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+  "react-dom": "19.1.0",
+  "@azure-rest/ai-inference": "latest",
+  "@azure/core-auth": "latest",
+  "@azure/core-sse": "latest",
+  "marked": "^15.0.11",
+  "isomorphic-dompurify": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
